Initial layout for home page #WIP
-Home controller
-Index action
-Application layout
-Integrated 960gs CSS framework

--- a/App/nomelollevo/app/views/layouts/application.html.erb
+++ b/App/nomelollevo/app/views/layouts/application.html.erb
@@ -2,13 +2,18 @@
 <html>
 <head>
   <title>Nomelollevo</title>
-  <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag "reset" %>
+  <%= stylesheet_link_tag "960" %>
+  <%= stylesheet_link_tag "nomelollevo" %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
+  <div id="header">
+    <span id="header-logo-text">nomelollevo</span>
+  </div>
 
-<%= yield %>
+  <%= yield %>
 
 </body>
 </html>
