Most CSS layout work for the home page

--- a/App/nomelollevo/app/views/home/index.html.erb
+++ b/App/nomelollevo/app/views/home/index.html.erb
@@ -6,16 +6,17 @@
       Cada mudanza es una oportunidad
     </div>
 
-    <span id="description-body">
+    <div id="description-body" class="description-text">
       nomelollevo hace f&aacute;cil que te deshagas de las cosas que te sobran o
-      que encuentres chollos y oportunidades cerca de tu casa.<br/>
-
+      que encuentres chollos y oportunidades cerca de tu casa.
+    </div>
+    <div id="sub-description-body" class="description-text">
       Todo con un par de clics.
-    </span>
+    </div>
 
-    <span id="new-sale-button" class="button">
-      Crea una nueva venta
-    </span>
+    <a id="new-sale-home-button" class="button" href="#">
+      <span>Crea una nueva venta</span>
+    </a>
   </div>
 
 </div>
