--- a/App/nomelollevo/public/stylesheets/nomelollevo.css
+++ b/App/nomelollevo/public/stylesheets/nomelollevo.css
@@ -19,7 +19,9 @@ body {
    text-shadow: #e59408 0px -1px 1px
 }
 
+/*************/
 /* Home page */
+/*************/
 
 #map-container {
    height: 450px;
@@ -39,7 +41,7 @@ body {
    margin-bottom: 50px;
    height: 300px;
    color: white;
-   padding: 10px
+   padding: 10px 20px
 }
 
 
@@ -47,5 +49,42 @@ body {
    font-size: 25px;
    text-align: center;
    margin-bottom: 40px;
-   margin-top: 5px
+   margin-top: 5px;
+   font-weight: bold
+}
+
+.description-text {
+   font-size: 12px
+}
+
+a.button {
+   display: block;
+   float: left;
+   font: normal 12px arial, sans-serif;
+   height: 37px;
+   margin-right: 6px;
+   padding-right: 18px; /* sliding doors padding */
+   text-decoration: none
+}
+
+a.button span {
+   -moz-border-radius: 3px;
+   border-radius: 3px;
+   background: transparent url('/images/home/new_sale_btn_bg.png');
+   display: block;
+   line-height: 14px;
+   padding: 10px 18px 10px 18px
+}
+
+#new-sale-home-button {
+   position: absolute;
+   bottom: 30px;
+   font-size: 20px;
+   color: white;
+   text-shadow: #e59408 0px -1px 1px;
+   margin-left: 145px
+}
+
+#sub-description-body {
+   margin-top: 40px
 }
