Working Facebook OAuth authentication #FTW!

--- a/App/nomelollevo/app/views/home/index.html.erb
+++ b/App/nomelollevo/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
       Todo con un par de clics.
     </div>
 
-    <a id="new-sale-home-button" class="button" href="#">
+    <a id="new-sale-home-button" class="button" href="/authentication/facebook">
       <span>Crea una nueva venta</span>
     </a>
   </div>
