--- a/App/nomelollevo/public/stylesheets/nomelollevo.css
+++ b/App/nomelollevo/public/stylesheets/nomelollevo.css
@@ -19,6 +19,35 @@ body {
    text-shadow: #e59408 0px -1px 1px
 }
 
+.overlay {
+   display: none;
+   overflow: visible;
+   position: absolute;
+   left: 0px;
+   top: 0px;
+   width:100%;
+   height:100%;
+   background-color: #968e7e;
+   text-align:center;
+   background: none repeat scroll 0 0 #555555;
+   opacity: 0.5;
+   z-index: 1001
+}
+
+.overlay-dialog {
+   color: #968e7e;
+   display: none;
+   overflow: visible;
+   position: absolute;
+   top: 100px;
+   width:500px;
+   height: 300px;
+   background-color: #fff;
+   padding:15px;
+   text-align:center;
+   z-index: 2001
+}
+
 /*************/
 /* Home page */
 /*************/
@@ -76,6 +105,11 @@ a.button span {
    padding: 10px 18px 10px 18px
 }
 
+a.cancel-link {
+   color: #f69b00;
+   font-weight: bold
+}
+
 #new-sale-home-button {
    position: absolute;
    bottom: 30px;
@@ -87,4 +121,48 @@ a.button span {
 
 #sub-description-body {
    margin-top: 40px
+}
+
+#auth-button-row {
+   position: relative;
+   width: 100%;
+   margin-top: 100px;
+   margin-left: 20px
+}
+
+#auth-cancel {
+   position: relative;
+   widht: 100%;
+   margin-top: 250px
+}
+
+
+/********************/
+/* Authentication  */
+/*******************/
+
+.overlay-shown {
+   overflow: visible;
+   position: absolute;
+   left: 0px;
+   top: 68px;
+   width:100%;
+   height:100%;
+   background-color: #968e7e;
+   text-align:center;
+   background: none repeat scroll 0 0 #555555;
+   z-index: 1001
+}
+
+.overlay-dialog-shown {
+   color: #968e7e;
+   overflow: visible;
+   position: relative;
+   margin: auto;
+   top: 100px;
+   width:500px;
+   height: 300px;
+   background-color: #fff;
+   padding:15px;
+   text-align:center
 }
